// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with load more 1`] = `
<withPropsOnChange(HorizontalGutter)
  className="Queue-root"
  size="double"
>
  <TransitionGroup
    appear={false}
    component={null}
    enter={false}
    exit={true}
  />
  <withPropsOnChange(Flex)
    justifyContent="center"
  >
    <withContext(WithInView)
      disableLoadMore={false}
      onLoadMore={[Function]}
    />
  </withPropsOnChange(Flex)>
</withPropsOnChange(HorizontalGutter)>
`;

exports[`renders correctly without load more 1`] = `
<withPropsOnChange(HorizontalGutter)
  className="Queue-root"
  size="double"
>
  <TransitionGroup
    appear={false}
    component={null}
    enter={false}
    exit={true}
  />
</withPropsOnChange(HorizontalGutter)>
`;
